syntax = "proto3";

package checkout_v1;

option go_package = "route256/checkout";

import "google/protobuf/empty.proto";

service CheckoutV1 {
  rpc AddToCart (AddToCartRequest) returns (google.protobuf.Empty);
  rpc DeleteFromCart (DeleteFromCartRequest) returns (google.protobuf.Empty);
  rpc ListCart (ListCartRequest) returns (ListCartResponse);
  rpc Puchase (PuchaseRequest) returns (google.protobuf.Empty);
}

message AddToCartRequest {
  int64 user = 1;
  uint32 sku = 2;
  uint32 count = 3;
}

message DeleteFromCartRequest {
  int64 user = 1;
  uint32 sku = 2;
  uint32 count = 3;
}

message AddToCartResponse {
  int64 id = 1;
}

message ListCartResponse {
  repeated CartItem items = 1;
  uint32 total_price = 2;
}

message ListCartRequest {
  int64 user = 1;
}

message CartItem {
	uint32 sku = 1;
	uint32 count = 2;
	string name = 3;
	uint32 price = 4;
}

message PuchaseRequest {
  int64 user = 1;
}