syntax = "proto3";

package loms_v1;

option go_package = "route256/loms";

import "google/protobuf/empty.proto";

service LomsV1 {
  rpc CancelOrder(CancelOrderRequest) returns (google.protobuf.Empty);
  rpc OrderPayed (OrderPayedRequest) returns (google.protobuf.Empty);
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc ListOrder (ListOrderRequest) returns (ListOrderResponse);
  rpc Stocks (StocksRequest) returns (StocksResponse);
}

message CancelOrderRequest {
  int64 order_id = 1;
}

message OrderPayedRequest {
  int64 order_id = 1;
}

message ListOrderRequest {
  int64 order_id = 1;
}

message StocksRequest {
  int32 sku = 1;
}

message OrderItem {
  uint32 sku = 1;
  uint32 count = 2;
}

message CreateOrderRequest {
  int64 user = 1;
  repeated OrderItem items = 2;
}

message CreateOrderResponse {
  int64 order_id = 1;
}

message ListOrderResponse {
  string status = 1;
  int64 user = 2;
  repeated OrderItem items = 3;
}

message StockItem {
  int64 warehouse_id = 1;
  uint64 count = 2;
}

message StocksResponse {
  repeated StockItem stocks = 1;
}
